Fix logo size on mobile

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -69,7 +69,7 @@ img#nat-and-p-logo {
   zoom: 50%;
 
   @include mobile {
-    zoom: 100%;
+    zoom: 40%;
   }
 }
 
